--- a/amime/locales/pt.yml
+++ b/amime/locales/pt.yml
@@ -178,6 +178,12 @@ date:
 invalid_user:
     Usuário inválido
 
+episodes_viewed:
+    Episódios vistos
+
+episodes_watched:
+    Episódios assistidos
+
 
 # Texts & buttons
 
