amime: view: return the search results instead of the first result

--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -382,6 +382,9 @@ add_in_batch_button:
 no_found_episodes_text: |
     Oops! I did not find any episode, if it is a mistake, inform those responsible.
 
+search_results_text: |
+    Search results: <b>{query}</b>
+
 
 # Alerts
 added_to_favorites_alert:
