--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -403,6 +403,9 @@ scanning_media_text: |
 no_results_text: |
     No results were found.
 
+video_too_long_text: |
+    The video is too long.
+
 
 # Alerts
 added_to_favorites_alert:
