anime: scan: return a message if timeout and uses httpx 0.17.1

--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -409,6 +409,9 @@ video_too_long_text: |
 day_releases_text: |
     Below are today's releases.
 
+timed_out_text: |
+    Timeout exceeded.
+
 
 # Alerts
 added_to_favorites_alert:
