--- a/amime/locales/pt.yml
+++ b/amime/locales/pt.yml
@@ -409,6 +409,9 @@ video_too_long_text: |
 day_releases_text: |
     Abaixo estão os lançamentos de hoje.
 
+timed_out_text: |
+    Tempo limite execedido.
+
 
 # Alerts
 added_to_favorites_alert:
