modules: stats: arrange the date location on today command

--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -407,7 +407,7 @@ video_too_long_text: |
     The video is too long.
 
 day_releases_text: |
-    Below are today's releases.
+    Below are today's releases. - <code>{date}</code>
 
 timed_out_text: |
     Timeout exceeded.
