--- a/amime/locales/pt.yml
+++ b/amime/locales/pt.yml
@@ -407,7 +407,7 @@ video_too_long_text: |
     O vídeo é muito longo.
 
 day_releases_text: |
-    Abaixo estão os lançamentos de hoje.
+    Abaixo estão os lançamentos de hoje. - <code>{date}</code>
 
 timed_out_text: |
     Tempo limite execedido.
